--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.38.0
-pandas==2.2.2
-mysql-connector-python==9.0.0
-python-dotenv==1.0.1
-scikit-learn==1.5.1
-joblib==1.4.2
-matplotlib==3.9.2
-seaborn==0.13.2
-faker==28.4.1
-numpy==2.1.1
+streamlit
+pandas
+mysql-connector-python
+python-dotenv
+scikit-learn
+joblib
+matplotlib
+seaborn
+faker
+numpy
